# pysh

./: .gitignore  README.md  pyproject.toml  requirements.txt
pysh/: __init__.py  __main__.py  builtins.py  executor.py  jobs.py  lexer.py  parser.py  shell.py
pysh/commands/: __init__.py  ls.py  var.py
