[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysh-shell"
dynamic = ["version"]
description = "A bash-like shell implemented in pure Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Peter" },
]
keywords = ["shell", "bash", "terminal", "cli", "command-line"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
]

[project.scripts]
pysh = "pysh.__main__:main"

[project.urls]
Homepage = "https://github.com/peter/pysh"
Repository = "https://github.com/peter/pysh"

[tool.setuptools.dynamic]
version = {attr = "pysh.__version__"}

[tool.setuptools.packages.find]
include = ["pysh*"]
